Fix the scrollbar issue in the hour section of time selection

--- a/css/material-datetimepicker.css
+++ b/css/material-datetimepicker.css
@@ -35,7 +35,6 @@ md-dialog.dtp {
 
 .dtp > .dtp-content {
     max-width: 300px;
-    max-height: 500px;
 }
 
 .dtp-header {
